<resources>
    <string name="app_name">ZijingURPViewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ZijingURPViewer</string>
    <string name="nav_header_subtitle" translatable="false">Dynastxu王朝旭</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>

    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="captcha">Captcha</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_failed">Login failed</string>
    <string name="logging_in">logging in...</string>
    <string name="off_campus_access">Off-campus Access</string>
    <string name="on_campus_access">On-campus Access</string>
    <string name="please_fill_in_all_the_fields">Please fill in all the fields</string>
    <string name="get_captcha_failed">Failed to obtain the captcha</string>
    <string name="maintenance">During line maintenance, please try a different line</string>
    <string name="website_maintenance">Website Maintenance</string>
    <string name="fetch_failed">Fetch failed</string>
    <string name="login_success">Login Success</string>
    <string name="back">Back</string>
    <string name="login_vpn_success">VPN success to login, please continue to login urp system</string>
    <string name="empty" translatable="false" />
    <string name="route" translatable="false">route</string>
    <string name="VSG_SESSIONID" translatable="false">VSG_SESSIONID</string>
    <string name="login_captcha_error">Captcha error</string>
    <string name="menu_exam">Exam</string>
    <string name="notLoggedIn">Not Logged In</string>
    <string name="getExamDataFailed">Get Exam Data Failed</string>
    <string name="getExamDataSuccess">Get Exam Data Success</string>
    <string name="extractExamDataFailed">Extract Exam Data Failed</string>
    <string name="wrong_password_or_username">Wrong Password or Username</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="check_all_grades">Check all grades</string>
    <string name="check_failing_grades">Check failing grades</string>
    <string name="menu_grades">Grades</string>
    <string name="getGradesCheckListFailed">Get Grades Check List Failed</string>
    <string name="teachingAssessment">Teaching Assessment</string>
    <string name="getAllGradesFailed">Get All Grades Failed</string>
    <string name="examNotOpen">Exam Not Open</string>
    <string name="check_fail_grades">Check Fail Grades</string>
    <string name="getFailGradesFailed">Get Fail Grades Failed</string>
    <string name="no_fail_grade">No Fail Grade</string>
    <string name="fragment_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="error" translatable="false">Error</string>
    <string name="setting_captcha_pre_filled">Captcha Pre-Filled</string>
    <string name="setting_captcha_pre_filled_description">Use OCR recognition technology</string>
    <string name="setting_save_password">Save Password</string>
    <string name="setting_auto_login">Auto Login</string>
    <string name="setting_auto_login_description">Need open %s and %s</string>
    <string name="identifying">Identifying...</string>
</resources>