<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_home"
        android:name="dynastxu.zijingurpviewer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="dynastxu.zijingurpviewer.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_exam"
        android:name="dynastxu.zijingurpviewer.ui.exam.ExamFragment"
        android:label="@string/menu_exam"
        tools:layout="@layout/fragment_exam" />

    <fragment
        android:id="@+id/nav_grades"
        android:name="dynastxu.zijingurpviewer.ui.grades.GradesFragment"
        android:label="@string/menu_grades"
        tools:layout="@layout/fragment_grades" />

    <fragment
        android:id="@+id/nav_grades_all"
        android:name="dynastxu.zijingurpviewer.ui.grades.GradesAllFragment"
        android:label="@string/check_all_grades"
        tools:layout="@layout/fragment_grades_all" />

    <fragment
        android:id="@+id/nav_grades_fail"
        android:name="dynastxu.zijingurpviewer.ui.grades.GradesFailFragment"
        android:label="@string/check_fail_grades"
        tools:layout="@layout/fragment_grades_fail" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="dynastxu.zijingurpviewer.ui.settings.SettingsFragment"
        android:label="@string/fragment_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>