<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/baseline_home_24"/>

        <item
            android:id="@+id/nav_login"
            android:title="@string/menu_login"
            android:icon="@drawable/baseline_login_24"/>

        <item
            android:id="@+id/nav_exam"
            android:title="@string/menu_exam"
            android:icon="@drawable/baseline_library_books_24"/>

        <item
            android:id="@+id/nav_grades"
            android:title="@string/menu_grades"
            android:icon="@drawable/baseline_library_books_24"/>
    </group>
</menu>