<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/LoginStyle"
            android:autoSizeTextType="uniform"
            android:gravity="center_horizontal|center_vertical"
            android:minHeight="48dp"
            android:text="@string/login"
            android:textColor="#2196F3" />

        <LinearLayout
            style="@style/LoginStyle"
            android:minHeight="48dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/accessPathSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="48dp"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/accessPathSpinner2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loadingLayout"
            style="@style/LoginStyle"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/maintenanceTextView"
            style="@style/LoginStyle"
            android:autoSizeTextType="uniform"
            android:gravity="center_horizontal|center_vertical"
            android:minHeight="48dp"
            android:text="@string/maintenance"
            android:textColor="#2196F3"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/loginElements"
            style="@style/LoginStyle"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/usernameEditText"
                style="@style/LoginStyle"
                android:layout_marginHorizontal="0dp"
                android:autofillHints="Username"
                android:hint="@string/username"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/LoginStyle"
                android:layout_marginHorizontal="0dp"
                android:autofillHints="Password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <LinearLayout
                android:id="@+id/captchaLayout"
                style="@style/LoginStyle"
                android:layout_marginHorizontal="0dp"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/captchaEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints="Captcha"
                    android:ems="10"
                    android:hint="@string/captcha"
                    android:inputType="text" />

                <ImageButton
                    android:id="@+id/captchaImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/captcha"
                    android:minWidth="96dp"
                    android:minHeight="48dp"
                    android:scaleType="fitXY" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginResultLayout"
                style="@style/LoginStyle"
                android:layout_marginHorizontal="0dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/loginResultTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_failed" />

            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                style="@style/LoginStyle"
                android:layout_marginHorizontal="0dp"
                android:text="@string/login" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/usernameTextView"
            style="@style/LoginStyle"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="20dp"
            android:text="@string/logout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>